docs: update changelog for JVM flags removal, soak test exclusion, integration test README